# cloudflare-manager

./: .gitignore  CHANGELOG-v0.3.0.md  README.md  build.bat  package-lock.json  package.json  打包源码.py
.github/workflows/: main.yml  release.yml
src/: app.js  index.html  styles.css  usage.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
